resolved overflow on page menu

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,6 +5,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%;
+    overflow: hidden;
 
     @include on-tablet {
       height: 480px;
