--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,8 +7,15 @@
   color: $menu_color;
   opacity: 0;
 
+  overflow: auto; /* to scroll the menu if needed */
+
+
   &__top {
     margin-bottom: 24px;
+
+    position: sticky; /* to keep cross always visible */
+    top: 0;
+    z-index: 1;
 
     @include on-tablet {
       margin-bottom: 0;
